refactor(images): add new images for sections

--- a/src/views/includes/pages/_info.pug
+++ b/src/views/includes/pages/_info.pug
@@ -5,7 +5,7 @@ section.info#info-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("holder", "Performance")
+        +infoPicture("dawn_desktop_background_dusk", "Performance")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Performance
         p.mb-0.
@@ -17,7 +17,7 @@ section.info#info-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("holder", "Audit Ready")
+        +infoPicture("architecture_blur_building_exterior", "Audit Ready")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Audit Ready
         p.mb-0.
@@ -29,7 +29,7 @@ section.info#info-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("holder", "SEO Ready")
+        +infoPicture("sea_waves_rocks_beach_sunrise", "SEO Ready")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left SEO Ready
         p.mb-0.
@@ -41,7 +41,7 @@ section.info#info-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("holder", "Best practices")
+        +infoPicture("wallpaper_autumn_branches", "Best practices")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Best practices
         p.mb-0.
@@ -53,7 +53,7 @@ section.info#info-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +infoPicture("holder", "Accessibility")
+        +infoPicture("clouds_daylight_forest", "Accessibility")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Accessibility
         p.mb-0.
@@ -65,7 +65,7 @@ section.info#info-6
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +infoPicture("holder", "Responsive design")
+        +infoPicture("background_beautiful_clouds", "Responsive design")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Responsive design
         p.mb-0.
