--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -5,7 +5,7 @@ section.services#services-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("holder", "Web Design")
+        +servicesPicture("landscape_tree_black", "Web Design")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Design
         p.mb-0.
@@ -17,7 +17,7 @@ section.services#services-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +servicesPicture("holder", "Web Development")
+        +servicesPicture("lighthouse_lantern_sky_storm_night", "Web Development")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Development
         p.mb-0.
@@ -29,7 +29,7 @@ section.services#services-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("holder", "Mobile Apps")
+        +servicesPicture("road_sunset_marking_grass", "Mobile Apps")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Mobile Apps
         p.mb-0.
@@ -41,7 +41,7 @@ section.services#services-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +servicesPicture("holder", "Web Applications")
+        +servicesPicture("sunset_sun_clouds", "Web Applications")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Applications
         p.mb-0.
@@ -53,7 +53,7 @@ section.services#services-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +servicesPicture("holder", "Smart Solutions")
+        +servicesPicture("sea_surf_wave_sunset", "Smart Solutions")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Smart Solutions
         p.mb-0.
