chore(fonts): update font-awesome to v5.11.2

--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,6 +1,6 @@
 //- partials/_analytics.pug
 if entry.inline
-  // Global site tag (gtag.js) - Google Analytics
+  //- Global site tag (gtag.js) - Google Analytics
   script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
   script.
     window.dataLayer = window.dataLayer || [];
