refactor(pages): update sections content

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -55,6 +55,11 @@
   justify-content: center;
 }
 
+.card-text {
+  font-size: 1.1rem;
+  text-align: center;
+}
+
 .card-button {
   position: absolute;
   top: -1.5rem;
