--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -9,7 +9,7 @@ section.portfolio#portfolio-1
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left UniKorn
         p.mb-0 Frontend framework for designing websites and web applications.
-        p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug.
+        p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="#")
             i.fas.fa-external-link-alt.mr-2
@@ -26,7 +26,7 @@ section.portfolio#portfolio-2
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Respo
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
-        p.mb-4.font-weight-bold #devices #take #screenshots #photo.
+        p.mb-4.font-weight-bold #devices #take #screenshots #photo
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="https://res.adorade.ro" target="_blank")
             i.fas.fa-external-link-alt.mr-2
@@ -43,7 +43,7 @@ section.portfolio#portfolio-3
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left WebMagia
         p.mb-0 High Quality WordPress Premium Templates.
-        p.mb-4.font-weight-bold #wordpress #themes #plugins #cms.
+        p.mb-4.font-weight-bold #wordpress #themes #plugins #cms
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="#")
             i.fas.fa-external-link-alt.mr-2
@@ -61,7 +61,7 @@ section.portfolio#portfolio-4
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Timero
         p.mb-0 A fresh way to save your time, without any distraction.
-        p.mb-4.font-weight-bold #time #tasks #get #done.
+        p.mb-4.font-weight-bold #time #tasks #get #done
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="https://timero.adorade.ro" target="_blank")
             i.fas.fa-external-link-alt.mr-2
