--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -12,7 +12,7 @@ section.features.text-center#features
             i.fas.fa-tachometer-alt.fa-5x
           .card-body
             h4.card-title Performance
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Made with love and in accordance with the newest technologies.
 
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
@@ -20,7 +20,7 @@ section.features.text-center#features
             i.fas.fa-tools.fa-5x
           .card-body
             h4.card-title Audit
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Examination of page performance to achieve your goals.
 
       .col-12.col-sm-6.col-lg-4
         .card.card-blue
@@ -28,7 +28,7 @@ section.features.text-center#features
             i.fas.fa-medal.fa-5x
           .card-body
             h4.card-title SEO Ready
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Generate leads for your business through organic traffic.
 
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
@@ -36,7 +36,7 @@ section.features.text-center#features
             i.fas.fa-heartbeat.fa-5x
           .card-body
             h4.card-title Best practices
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Follow the best practices for modern web development.
 
       .col-12.col-sm-6.col-lg-4
         .card.card-green
@@ -44,7 +44,7 @@ section.features.text-center#features
             i.fas.fa-universal-access.fa-5x
           .card-body
             h4.card-title Accessibility
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Provide equal access, no barriers that prevent interaction.
 
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
@@ -52,8 +52,8 @@ section.features.text-center#features
             i.fas.fa-desktop.fa-5x
           .card-body
             h4.card-title Responsive
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            p.card-text Make it look good on all devices, mobile-friendly.
 
     .row
       .col-12
-        p.mb-0: a.btn.btn-orange(href="info.html") Read more
+        p.mb-0: a.btn.btn-orange(href="info.html") More &#8594;
