--- a/src/views/includes/sections/_testimonials.pug
+++ b/src/views/includes/sections/_testimonials.pug
@@ -18,10 +18,10 @@ section.testimonials.text-center#testimonials
                 p.mb-0: q
                   | A true partnership is a two-way street, ideas and information flow openly and regularly, based on
                   | a foundation of mutual trust and respect for one another’s expertise and our clients embrace this philosophy.
-                footer.blockquote-footer Someone famous in #[cite(title="Source Title") Source Title]
+                footer.blockquote-footer Chalion Trevor - #[cite(title="WebMagia") WebMagia]
             .carousel-item
               blockquote.blockquote
                 p.mb-0: q
                   | The best and most productive relationships are synergistic and goal-oriented, and a long-term
                   | relationship has the value add of deep-rooted industry and company knowledge and relationships.
-                footer.blockquote-footer Someone famous in #[cite(title="Source Title") Source Title]
+                footer.blockquote-footer Mario Dederio - #[cite(title="UniKorn") UniKorn]
