--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -9,45 +9,45 @@ section.cards#cards
           +cardsPicture("landscape_tree_black", "Web Design")
           .card-img-overlay.card-d-flex
             h4.card-title Web Design
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="services.html") Click here
+            p.card-text Made with love and in accordance with the newest technologies.
+            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
           +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
           .card-img-overlay.card-d-flex
             h4.card-title Web Dev
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="services.html") Click here
+            p.card-text We devote our attention to writing every line of code.
+            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
           +cardsPicture("road_sunset_marking_grass", "Mobile Development")
           .card-img-overlay.card-d-flex
             h4.card-title Mobile Dev
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="services.html") Click here
+            p.card-text Turn devices into miniature powerhouses of function and fun.
+            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
           +cardsPicture("sunset_sun_clouds", "Web Applications")
           .card-img-overlay.card-d-flex
             h4.card-title Web Apps
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="services.html") Click here
+            p.card-text Take the advance of technologies, interact with your user.
+            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
           +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
           .card-img-overlay.card-d-flex
             h4.card-title Smart Solutions
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="services.html") Click here
+            p.card-text Make your daily life better and easier with high-end technology.
+            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
           +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
           .card-img-overlay.card-d-flex
             h4.card-title Portfolio
-            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="portfolio.html") Click here
+            p.card-text Look at showcase of our creative and inspired work.
+            a.btn.btn-outline-orange.card-link(href="portfolio.html") More &#8594;
