--- a/src/views/includes/sections/_parallax.pug
+++ b/src/views/includes/sections/_parallax.pug
@@ -12,4 +12,4 @@ section.parallax#parallax
           .col.col-lg-8.offset-lg-2
             h2
               | Once upon a time, we started a journey, to discover, to learn...
-              | #[span beautiful things].
+              | #[span.p-2 beautiful things].
