--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -21,3 +21,8 @@ h1, h2, h3, h4, h5, h6 { font-family: Aclonica, sans-serif; } // stylelint-disab
 .shadow-lg {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, .5) !important; // stylelint-disable-line
 }
+
+.drawer-body {
+  display: flex;
+  flex-direction: column;
+}
