fix(images): disable cookiebot

--- a/src/views/includes/pages/_cookies.pug
+++ b/src/views/includes/pages/_cookies.pug
@@ -2,7 +2,15 @@
 section.cookies#cookies
   .container
     .row
-      .col
-        if entry.inline
-          script#CookieDeclaration(
-            src="https://consent.cookiebot.com/fa29e1aa-8209-485c-af5c-d9918ac44fdb/cd.js" async)
+      .col.
+        This website uses cookies. We use cookies to personalise content and ads, to provide social media features and to analyse our traffic. We also share information about your use of our site with our social media, advertising and analytics partners who may combine it with other information that you’ve provided to them or that they’ve collected from your use of their services. You consent to our cookies if you continue to use our website.
+
+        Cookies are small text files that can be used by websites to make a user's experience more efficient.
+
+        The law states that we can store cookies on your device if they are strictly necessary for the operation of this site. For all other types of cookies we need your permission.
+
+        This site uses different types of cookies. Some cookies are placed by third party services that appear on our pages.
+
+      //- if entry.inline
+      //-   script#CookieDeclaration(
+      //-     src="https://consent.cookiebot.com/fa29e1aa-8209-485c-af5c-d9918ac44fdb/cd.js" async)
