--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -14,7 +14,7 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
       include ../partials/_styles
     block head-js
       include ../partials/_analytics
-      include ../partials/_cookie
+      //- include ../partials/_cookie
 
   body
     main
