fix(carousel): add `ol` to carousel-indicators

--- a/src/views/includes/sections/_carousel.pug
+++ b/src/views/includes/sections/_carousel.pug
@@ -10,7 +10,7 @@ section.carousel-portfolio.text-center#carousel-portfolio
     .row.mb-5
       .col
         .carousel.slide.carousel-fade#carouselPortfolio(data-ride="carousel")
-          .carousel-indicators
+          ol.carousel-indicators
             li.active(data-target="#carouselPortfolio" data-slide-to="0")
             li(data-target="#carouselPortfolio" data-slide-to="1")
 
