--- a/src/views/includes/sections/_testimonials.pug
+++ b/src/views/includes/sections/_testimonials.pug
@@ -8,7 +8,7 @@ section.testimonials.text-center#testimonials
     .row.mt-5
       .col-8.offset-2
         .carousel.slide.pb-3#carouselTestimonial(data-ride="carousel")
-          .carousel-indicators
+          ol.carousel-indicators
             li.active(data-target="#carouselTestimonial" data-slide-to="0")
             li(data-target="#carouselTestimonial" data-slide-to="1")
 
