fix(link): update cross-origin destination

--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -28,10 +28,10 @@ section.portfolio#portfolio-2
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
         p.mb-4.font-weight-bold #devices #take #screenshots #photo
         .buttons-wrapper
-          a.btn.btn-info.mr-2(href="https://res.adorade.ro" target="_blank")
+          a.btn.btn-info.mr-2(href="https://res.adorade.ro" rel="noopener" target="_blank")
             i.fas.fa-external-link-alt.mr-2
             span.font-weight-bold Online
-          a.btn.btn-light(href="https://github.com/adorade/respo" target="_blank")
+          a.btn.btn-light(href="https://github.com/adorade/respo" rel="noopener" target="_blank")
             i.fab.fa-github.mr-2
             span.font-weight-bold GitHub
 
@@ -63,9 +63,9 @@ section.portfolio#portfolio-4
         p.mb-0 A fresh way to save your time, without any distraction.
         p.mb-4.font-weight-bold #time #tasks #get #done
         .buttons-wrapper
-          a.btn.btn-info.mr-2(href="https://timero.adorade.ro" target="_blank")
+          a.btn.btn-info.mr-2(href="https://timero.adorade.ro" rel="noopener" target="_blank")
             i.fas.fa-external-link-alt.mr-2
             span.font-weight-bold Online
-          a.btn.btn-light(href="https://github.com/adorade/timero" target="_blank")
+          a.btn.btn-light(href="https://github.com/adorade/timero" rel="noopener" target="_blank")
             i.fab.fa-github.mr-2
             span.font-weight-bold GitHub
