fix(color): add contrast ratio for tags

--- a/src/scss/components/_tags.scss
+++ b/src/scss/components/_tags.scss
@@ -49,6 +49,7 @@
 
   .html {
     background-color: #f2552c;
+    color: #000;
   }
 
   .js {
@@ -67,8 +68,8 @@
   }
 
   .serverless {
-    background-color: #000;
-    color: #b73833;
+    background-color: #b73833;
+    color: #eee;
   }
 
   .vue {
