chore(meta): add description to pages

--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -3,7 +3,7 @@ extends layout/_base
 
 prepend setting
   - title = 'Adorade - Contact';
-  - description = '';
+  - description = 'Should you need any further information, please do not hesitate to contact us!';
   - currentUrl = 'contact.html';
 
 block header
