--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -4,7 +4,7 @@ section.contact.text-center#contact
   .container
     .row
       .col-12
-        h3.mb-5 Please, be so kind, don't hesitate to contact us!
+        h4.mb-5 If you have any type of questions do not hesitate to contact us!
 
     .row.no-gutters
       .col.col-md-8.offset-md-2
@@ -77,5 +77,5 @@ section.contact.text-center#contact
               .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
-            button.btn.btn-info(type="submit") Submit
+            button.btn.btn-info.mr-1(type="submit") Submit
             button.btn.btn-outline-light(type="reset") Cancel
