--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -10,7 +10,7 @@
           span.sr-only Close
 
       .modal-body
-        p Please, be so kind, don't hesitate to contact us!
+        p If you have any type of questions do not hesitate to contact us!
 
         //- the form result (success or error) will be rendered inside `.form-response`
         .form-response.alert.shadow-lg.d-none
@@ -81,7 +81,7 @@
               .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
-            button.btn.btn-info(type="submit") Submit
+            button.btn.btn-info.mr-1(type="submit") Submit
             button.btn.btn-outline-dark(type="reset") Cancel
 
       .modal-footer
