--- a/src/views/info.pug
+++ b/src/views/info.pug
@@ -3,7 +3,7 @@ extends layout/_base
 
 prepend setting
   - title = 'Adorade - Info';
-  - description = '';
+  - description = 'We look forward to a successful working relationship in the future.';
   - currentUrl = 'info.html';
 
 block header
