--- a/src/views/portfolio.pug
+++ b/src/views/portfolio.pug
@@ -3,7 +3,7 @@ extends layout/_base
 
 prepend setting
   - title = 'Adorade - Portfolio';
-  - description = '';
+  - description = 'Web design for small businesses, startups and individuals';
   - currentUrl = 'portfolio.html';
 
 block header
