--- a/src/views/services.pug
+++ b/src/views/services.pug
@@ -3,7 +3,7 @@ extends layout/_base
 
 prepend setting
   - title = 'Adorade - Services';
-  - description = '';
+  - description = 'We help you with web design solutions to develop your online presence! Complete services.';
   - currentUrl = 'services.html';
 
 block header
