--- a/src/scss/unikorn/mixins/_buttons.scss
+++ b/src/scss/unikorn/mixins/_buttons.scss
@@ -26,6 +26,7 @@
     } @else {
       box-shadow: 0 0 0 $btn-focus-width rgba(mix(color-yiq($background), $border, 15%), .5);
     }
+    color: inherit;
   }
 
   // Disabled comes first so active can properly restyle
