--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -8,18 +8,30 @@ section.newsletter.text-center#newsletter
         //- the form result (success or error) will be rendered inside `.form-response`
         .form-response.alert.shadow-lg.d-none
 
-        form.needs-validation.p-4.shadow-lg#news-form(
+        form.needs-validation.form-inline.p-4.shadow-lg#news-form(
           name="news-form" method="POST" action="/thanks/news.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
-          input.d-none#bot-field(type="text" name="bot-field" autocomplete="off")
+          .form-group.d-none
+            label(for="bot-field") Don’t fill this out if you're human
+            input.form-control#bot-field(type="text" name="bot-field" autocomplete="off")
 
-          .input-group
+          .form-group
+            input.form-control.rounded-left#name(
+              type="text" name="name" maxlength="50" placeholder="Your name"
+              pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
+              title="Please enter a valid name." aria-label="Your name" required)
+            label.sr-only(for="name") Name
+            .valid-feedback Looks good!
+            .invalid-feedback Please enter a valid name.
+
+          .form-group
             input.form-control#email(
               type="email" name="email" placeholder="your@email.here"
               pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
               title="Please enter a valid email" aria-label="your@email.here" required)
-            .input-group-append
-              button.btn.btn-orange(type="submit") Subscribe
+            label.sr-only(for="name") Email
             .valid-feedback Looks good!
             .invalid-feedback Please enter a valid email.
+
+          button.btn.btn-orange.ml-sm-n1(type="submit") Subscribe
