--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -28,19 +28,18 @@ block custom-js
 block cookie-consent
   if entry.inline
     script(
-      src="https://cdn.jsdelivr.net/npm/cookieconsent@3.1.1/build/cookieconsent.min.js" data-cfasync="false"
+      src="https://cdn.jsdelivr.net/npm/cookieconsent@3.1.1/build/cookieconsent.min.js"
       integrity="sha384-xLPjH6nqG4p/2mu1KJ1t+4KqcvkyXVwBucQtyGK65lDNfKzECxGY/QEYWR+Wompr" crossorigin="anonymous")
-    script#init-cookie-consent.
+    script.
       window.cookieconsent.initialise({
         "palette": {
           "popup": {
-            "background": "#aa0000",
-            "text": "#ffdddd"
+            "background": "#252e39"
           },
           "button": {
-            "background": "#ff0000"
+            "background": "#17a2b8"
           }
         },
-        "position": "bottom-right",
+        "theme": "classic",
         "type": "opt-out"
       });
