--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -23,10 +23,10 @@ section.services#services-2
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Development
         p.mb-3.font-weight-bold.
-          We devote our attention to writing every line of code.
+          We focus our attention in writing every line of code.
         p.mb-4.
-          We follow the latest web design trends to develop modern websites for small and large businesses.
-          We make sure that you website stands out from your competition, that generate leads for your business.
+          We follow the latest web design trends to develop modern websites for small and as well large businesses.
+          We are going to make sure that your website will stands out from your competition, that will generate leads for your business.
         p.mb-0.font-weight-bold #wordpress #cms #catalogue #ecommerce #blog
 
 section.services#services-3
@@ -39,8 +39,8 @@ section.services#services-3
         p.mb-3.font-weight-bold.
           Turn devices into miniature powerhouses of function and fun.
         p.mb-4.
-          A mobile application is a type of application software designed to run on a smartphone or tablet.
-          Mobile applications frequently serve toprovide users with similar services to those accessed on PCs.
+          A mobile application is a type of a software applications designed to run on a smartphone or a tablet.
+          Mobile applications frequently serve to provide users with similar services to those accessed on PCs.
         p.mb-0.font-weight-bold #android #ios #mobile #tablet #software #online
 
 section.services#services-4
@@ -51,10 +51,10 @@ section.services#services-4
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Applications
         p.mb-3.font-weight-bold.
-          Take the advance of technologies, interact with your user.
+          Make the most of technologies, interact with your user.
         p.mb-4.
-          Web applications are loaded as web pages, but can store data locally and continue to function while offline.
-          They have similar functionality as a desktop software application, or to a mobile app.
+          Web applications are loaded as web pages, but they can store data locally and they can continue to function while offline.
+          They have just as similar functionalities as a desktop software application or as a mobile app.
         p.mb-0.font-weight-bold #web #apps #webmail #client-side #software #offline
 
 section.services#services-5
@@ -67,7 +67,7 @@ section.services#services-5
         p.mb-3.font-weight-bold.
           Make your daily life better and easier.
         p.mb-4.
-          Smart Solutions applies the latest in artificial intelligence to solve complex problems. Improve your
+          Smart Solutions applies the latest artificial intelligence to solve complex problems. Improve your
           living space by considering the size of your home or easy to use products with high-end technology.
 
         p.mb-0.font-weight-bold #artificial #intelligence #living #space #high-end #tech
