--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -3,8 +3,8 @@
   .row
     .col.col-lg-8.offset-lg-2
       p.lead.mb-5
-        | Interested working together? We are here to answer any question you
-        | may have about our services. Reach out to us and we'll do our best to
+        | Interested in working with us? We are here to answer any sort of question you
+        | may have. Get in touch with us and we will do our best to
         | find the right solution for you.
       //- Button trigger modal
       button.btn.btn-orange.btn-lg.text-uppercase.shadow-lg(
