chore(text): more typo correct

--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -25,7 +25,7 @@ section.cards#cards
           +cardsPicture("road_sunset_marking_grass", "Mobile Development")
           .card-img-overlay.card-d-flex
             h4.card-title Mobile Dev
-            p.card-text Turn devices into miniature powerhouses of function and fun.
+            p.card-text Turn devices into miniature power station of function and fun.
             a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
@@ -33,7 +33,7 @@ section.cards#cards
           +cardsPicture("sunset_sun_clouds", "Web Applications")
           .card-img-overlay.card-d-flex
             h4.card-title Web Apps
-            p.card-text Take the advance of technologies, interact with your user.
+            p.card-text Take advantage of technology, interact with your user.
             a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
