chore(text): final typo correct

--- a/src/views/includes/sections/_testimonials.pug
+++ b/src/views/includes/sections/_testimonials.pug
@@ -22,6 +22,6 @@ section.testimonials.text-center#testimonials
             .carousel-item
               blockquote.blockquote
                 p.mb-0: q
-                  | The best and most productive relationships are synergistic and goal-oriented, and a long-term
-                  | relationship has the value add of deep-rooted industry and company knowledge and relationships.
+                  | The best and most productive relationships are synergetic and goal-oriented, and a long-term
+                  | relationship has the value added of deep-rooted industry and company knowledge and relationships.
                 footer.blockquote-footer.text-light Mario Dederio - #[cite(title="UniKorn") UniKorn]
