--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -23,10 +23,10 @@ section.services#services-2
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Development
         p.mb-3.font-weight-bold.
-          We focus our attention in writing every line of code.
+          We focus our attention to writing every line of code.
         p.mb-4.
-          We follow the latest web design trends to develop modern websites for small and as well large businesses.
-          We are going to make sure that your website will stands out from your competition, that will generate leads for your business.
+          We follow the latest web design trends to develop modern websites for small as well as large businesses.
+          We are going to make sure that your website will stand out from your competition, that will generate leads for your business.
         p.mb-0.font-weight-bold #wordpress #cms #catalogue #ecommerce #blog
 
 section.services#services-3
@@ -39,7 +39,7 @@ section.services#services-3
         p.mb-3.font-weight-bold.
           Turn devices into miniature powerhouses of function and fun.
         p.mb-4.
-          A mobile application is a type of a software applications designed to run on a smartphone or a tablet.
+          A mobile application is a type of a software application designed to run on a smartphone or a tablet.
           Mobile applications frequently serve to provide users with similar services to those accessed on PCs.
         p.mb-0.font-weight-bold #android #ios #mobile #tablet #software #online
 
