--- a/src/views/partials/_meta.pug
+++ b/src/views/partials/_meta.pug
@@ -1,9 +1,9 @@
 //- partials/_meta.pug
-// Required meta tags
+//--- Required meta tags
 meta(charset="utf-8")
 meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 
-// Primary Meta Tags
+//--- Primary Meta Tags
 if title
   title= title
 else
@@ -14,7 +14,7 @@ if description
 else
   meta(name="description" content="Once upon a time, we started a journey, to discover, to learn... beautiful things.")
 
-//- // Schema.org markup for Google
+//- //--- Schema.org markup for Google
 //- script(type="application/ld+json").
 //-   {
 //-     "@context": "https://schema.org",
@@ -24,7 +24,7 @@ else
 //-     "image": "https://adorade.ro/images/share/adorade_og_share.jpg"
 //-   }
 
-// Open Graph / Facebook
+//--- Open Graph / Facebook
 meta(property="og:title" content="Adorade - Web Design Company")
 meta(property="og:type" content="website")
 meta(property="og:url" content="https://adorade.ro/")
