--- a/src/views/partials/_statics.pug
+++ b/src/views/partials/_statics.pug
@@ -1,7 +1,6 @@
 //- partials/_statics.pug
 //- Generate using http://realfavicongenerator.net/
-//- FAVICONS
-// Favicon for Website, Andoid and iOS
+//--- Favicon for Website, Andoid and iOS
 link(rel="apple-touch-icon" sizes="180x180" href="statics/icons/apple-touch-icon.png")
 link(rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png")
 link(rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png")
