fix(hero): change type of background image

--- a/src/views/includes/sections/_testimonials.pug
+++ b/src/views/includes/sections/_testimonials.pug
@@ -7,8 +7,8 @@ section.testimonials.text-center#testimonials
 
     .row.mt-5
       .col-8.offset-2
-        .carousel.slide.pb-3#carouselTestimonial(data-ride="carousel")
-          ol.carousel-indicators
+        .carousel.slide#carouselTestimonial(data-ride="carousel")
+          ol.carousel-indicators.mb-n3
             li.active(data-target="#carouselTestimonial" data-slide-to="0")
             li(data-target="#carouselTestimonial" data-slide-to="1")
 
