feat(gtag): add automatic tracking for gtags.js

--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -77,5 +77,5 @@ section.contact.text-center#contact
               .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
-            button.btn.btn-info.mr-1(type="submit") Submit
-            button.btn.btn-outline-light(type="reset") Cancel
+            button.btn.btn-info.mr-1(type="submit" aria-label="Submit Contact") Submit
+            button.btn.btn-outline-light(type="reset" aria-label="Cancel Contact") Cancel
