--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -10,7 +10,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Design
             p.card-text Made with love and in accordance with the newest technologies.
-            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Web Design") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -18,7 +18,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Dev
             p.card-text We devote our attention to writing every line of code.
-            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Web Dev") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -26,7 +26,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Mobile Dev
             p.card-text Turn devices into miniature power station of function and fun.
-            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Mobile Dev") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -34,7 +34,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Apps
             p.card-text Take advantage of technology, interact with your user.
-            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Web Apps") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -42,7 +42,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Smart Solutions
             p.card-text Make your daily life better and easier with high-end technology.
-            a.btn.btn-outline-orange.card-link(href="services.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Smart Solutions") More &#8594;
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -50,4 +50,4 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Portfolio
             p.card-text Look at showcase of our creative and inspired work.
-            a.btn.btn-outline-orange.card-link(href="portfolio.html") More &#8594;
+            a.btn.btn-outline-orange.card-link(href="portfolio.html" aria-label="Portfolio") More &#8594;
