--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -13,7 +13,7 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
     block styles
       include ../partials/_styles
     block head-js
-      include ../partials/_analytics
+      include ../partials/_gtag
 
   body
     main
