--- a/src/views/modules/drawer/_drawer.pug
+++ b/src/views/modules/drawer/_drawer.pug
@@ -10,7 +10,7 @@ include ../../mixins/_drawer
             source(data-srcset="images/logo/logo-adorade-drawer.webp" type="image/webp")
             source(data-srcset="images/logo/logo-adorade-drawer.png" type="image/png")
             img.lazy-drawer.img-fluid(data-src="images/logo/logo-adorade-drawer.png" alt="Adorade")
-        button.close(type="button" role="button" data-dismiss="drawer" aria-label="Close")
+        button.close(type="button" role="button" data-dismiss="drawer" aria-label="Close Drawer")
           i.fas.fa-times
 
       .drawer-body
