--- a/src/views/partials/_gtag.pug
+++ b/src/views/partials/_gtag.pug
@@ -1,4 +1,4 @@
-//- partials/_analytics.pug
+//- partials/_gtag.pug
 if entry.inline
   //--- Global site tag (gtag.js) - Google Analytics
   script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
