--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -5,7 +5,7 @@
     .modal-content
       .modal-header
         h4.modal-title#GetQuoteModalLabel Contact us
-        button.close(type="button" data-dismiss="modal" aria-label="Close")
+        button.close(type="button" data-dismiss="modal" aria-label="Close Modal")
           span(aria-hidden="true") &times;
           span.sr-only Close
 
@@ -81,7 +81,7 @@
               .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
-            button.btn.btn-info.mr-1(type="submit") Submit
-            button.btn.btn-outline-dark(type="reset") Cancel
+            button.btn.btn-info.mr-1(type="submit" aria-label="Submit Get Quote") Submit
+            button.btn.btn-outline-dark(type="reset" aria-label="Cancel Get Quote") Cancel
 
       .modal-footer
