--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -34,4 +34,4 @@ section.newsletter.text-center#newsletter
             .valid-feedback Looks good!
             .invalid-feedback Please enter a valid email.
 
-          button.btn.btn-orange.ml-sm-n1(type="submit") Subscribe
+          button.btn.btn-orange.ml-sm-n1(type="submit" aria-label="Subscribe") Subscribe
