--- a/src/views/includes/misc/_back-to-top.pug
+++ b/src/views/includes/misc/_back-to-top.pug
@@ -1,6 +1,6 @@
 //- includes/misc/_back-to-top.pug
 .back-to-top
-  .back-to-top-icon.d-flex
-    span.sr-only Go to top
+  .back-to-top-icon.d-flex(aria-label="Go to top")
+    //- span.sr-only Go to top
     i.fas.fa-chevron-up.fa-fw
     .back-to-top-percent
