--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -8,4 +8,4 @@
         | find the right solution for you.
       //- Button trigger modal
       button.btn.btn-orange.btn-lg.text-uppercase.shadow-lg(
-        type="button" data-toggle="modal" data-target="#GetQuoteModal") get in touch
+        type="button" data-toggle="modal" data-target="#GetQuoteModal" aria-label="Get in touch") get in touch
