perf(fonts): add self-hosted google fonts

--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -8,6 +8,8 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
     block head
       include ../partials/_meta
       include ../partials/_statics
+      include ../partials/_preconnect
+      include ../partials/_preload
     block fonts
       include ../partials/_fonts
     block styles
